plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'br.com.rts'
version = '0.0.1-SNAPSHOT'
description = 'EventManager'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springModulithVersion', "2.0.6")
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
    implementation('org.springframework.boot:spring-boot-starter-security')
    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
    implementation('org.thymeleaf.extras:thymeleaf-extras-springsecurity6')
    implementation('io.github.wimdeblauwe:htmx-spring-boot-thymeleaf:5.1.0')
    implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
    implementation 'org.webjars.npm:htmx.org:1.9.10'
    implementation 'org.webjars:webjars-locator-core'
    implementation('io.github.wimdeblauwe:error-handling-spring-boot-starter:5.1.1')
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3')
    implementation('org.springframework.modulith:spring-modulith-starter-core')
    implementation('org.springframework.modulith:spring-modulith-starter-jpa')
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('io.micrometer:micrometer-registry-prometheus')
    // Apache POI for Excel Generation
    implementation('org.apache.poi:poi:5.3.0')
    implementation('org.apache.poi:poi-ooxml:5.3.0')
//    Mapstruct processor
    implementation('org.mapstruct:mapstruct:1.6.3')
    annotationProcessor('org.mapstruct:mapstruct-processor:1.6.3')
//    Lombok processor
    compileOnly('org.projectlombok:lombok')
    annotationProcessor('org.projectlombok:lombok')
    annotationProcessor('org.projectlombok:lombok-mapstruct-binding:0.2.0')

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'org.springframework.modulith:spring-modulith-actuator'
    runtimeOnly 'org.springframework.modulith:spring-modulith-observability'

    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-thymeleaf-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

dependencyManagement {
    imports {
        mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
